# rust-http-lambda

./: .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: main.rs  prisma_type.rs  route.rs
src/route/: channel_select.rs
