[package]
name = "http-lambda"
version = "0.1.0"
edition = "2021"
default-run = "http-lambda"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
axum = "0.6.18"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
openssl = { version = "0.10.55", features = ["vendored"] }
serde = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["normalize-path"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["mongodb"]}
fake = "2.6.1"

[workspace]
resolver = "2"
members = [
  "prisma-cli"
]
